app/src/test/resources/programs/valid/NestedLoopsBreaksProperlyWithLabels.extension
fun main() -> Int = {
    // The value of that expression should be 3
    loop@firstLoop {
        loop@secondLoop {
            loop@thirdLoop {
                // Such loop label does not exists
                break@firstLoop 3;
            }
            break 2;
        }
        break 1;
    }
}