app/src/test/resources/programs/invalid/loops/UnknownLoopLabel.extension
foo main() -> Int = {
    loop@firstLoop {
        // Such loop label does not exists
        break@secondLoop 1;
    }
}